--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             </h2>
 
             <!-- card 1-->
-            <a class="article_card" href="./public/html/palette.html">
+            <a class="article__card" href="./public/html/palette.html">
                 <figure class="article__figure">
                     <span class="article__figure--new">Nouveau</span>
                     <img class="article__figure__img"
@@ -90,7 +90,7 @@
             <!--end card 1-->
 
             <!--card 2-->
-            <a class="article_card" href="./public/html/note.html">
+            <a class="article__card" href="./public/html/note.html">
                 <figure class="article__figure">
                     <span class="article__figure--new">Nouveau</span>
                     <img class="article__figure__img" src="public/img/restaurants/stil-u2Lp8tXIcjw-unsplash.jpg" alt="">
@@ -107,7 +107,7 @@
             <!--end card 2-->
 
             <!--card 3-->
-            <a class="article_card" href="./public/html/francaise.html">
+            <a class="article__card" href="./public/html/francaise.html">
                 <figure class="article__figure">
                     <img class="article__figure__img" src="public/img/restaurants/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
                         alt="">
@@ -124,7 +124,7 @@
             <!--end card 3-->
 
             <!--card 4-->
-            <a class="article_card" href="./public/html/delice.html">
+            <a class="article__card" href="./public/html/delice.html">
                 <figure class="article__figure">
                     <img class="article__figure__img"
                         src="public/img/restaurants/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg" alt="">
