--- a/public/html/francaise.html
+++ b/public/html/francaise.html
@@ -48,7 +48,7 @@
                     <h3>25€</h3>
                 </div>
                 <div class="validation">
-                    <span class="fas fa-check-circle check"></span>
+                    <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
             <div class="menu__submenu__flat delay-2">
@@ -58,7 +58,7 @@
                     <h3>35€</h3>
                 </div>
                 <div class="validation">
-                    <span class="fas fa-check-circle check"></span>
+                    <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
             <div class="menu__submenu__flat delay-3">
@@ -68,7 +68,7 @@
                     <h3>20€</h3>
                 </div>
                 <div class="validation">
-                    <span class="fas fa-check-circle check"></span>
+                    <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
         </div>
@@ -85,7 +85,7 @@
                     <h3>40€</h3>
                 </div>
                 <div class="validation">
-                    <span class="fas fa-check-circle check"></span>
+                    <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
             <div class="menu__submenu__flat delay-5">
@@ -95,7 +95,7 @@
                     <h3>35€</h3>
                 </div>
                 <div class="validation">
-                    <span class="fas fa-check-circle check"></span>
+                    <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
             <div class="menu__submenu__flat delay-6">
@@ -105,7 +105,7 @@
                     <h3>44€</h3>
                 </div>
                 <div class="validation">
-                    <span class="fas fa-check-circle check"></span>
+                    <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
         </div>
@@ -123,17 +123,17 @@
                     <h3>18€</h3>
                 </div>
                 <div class="validation">
-                    <span class="fas fa-check-circle check"></span>
+                    <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
             <div class="menu__submenu__flat delay-8">
                 <div class="menu__submenu__flat--text">
-                    <h3>Fondant au chcolat</h3>
+                    <h3>Fondant au chocolat</h3>
                     <p>Revisité</p>
                     <h3>22€</h3>
                 </div>
                 <div class="validation">
-                    <span class="fas fa-check-circle check"></span>
+                    <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
             <div class="menu__submenu__flat delay-9">
@@ -143,7 +143,7 @@
                     <h3>23€</h3>
                 </div>
                 <div class="validation">
-                    <span class="fas fa-check-circle check"></span>
+                    <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
         </div>
