--- a/public/html/note.html
+++ b/public/html/note.html
@@ -47,7 +47,7 @@
                     <h3>25€</h3>
                 </div>
                 <div class="validation">
-                    <span class="fas fa-check-circle check"></span>
+                    <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
             <div class="menu__submenu__flat delay-2">
@@ -57,7 +57,7 @@
                     <h3>35€</h3>
                 </div>
                 <div class="validation">
-                    <span class="fas fa-check-circle check"></span>
+                    <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
             <div class="menu__submenu__flat delay-3">
@@ -67,7 +67,7 @@
                     <h3>20€</h3>
                 </div>
                 <div class="validation">
-                    <span class="fas fa-check-circle check"></span>
+                    <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
             <div class="menu__submenu__flat delay-4">
@@ -77,7 +77,7 @@
                     <h3>35€</h3>
                 </div>
                 <div class="validation">
-                    <span class="fas fa-check-circle check"></span>
+                    <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
         </div>
@@ -94,7 +94,7 @@
                     <h3>40€</h3>
                 </div>
                 <div class="validation">
-                    <span class="fas fa-check-circle check"></span>
+                    <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
             <div class="menu__submenu__flat delay-6">
@@ -104,7 +104,7 @@
                     <h3>35€</h3>
                 </div>
                 <div class="validation">
-                    <span class="fas fa-check-circle check"></span>
+                    <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
             <div class="menu__submenu__flat delay-7">
@@ -114,7 +114,7 @@
                     <h3>44€</h3>
                 </div>
                 <div class="validation">
-                    <span class="fas fa-check-circle check"></span>
+                    <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
         </div>
@@ -132,7 +132,7 @@
                     <h3>18€</h3>
                 </div>
                 <div class="validation">
-                    <span class="fas fa-check-circle check"></span>
+                    <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
             <div class="menu__submenu__flat delay-9">
@@ -142,7 +142,7 @@
                     <h3>22€</h3>
                 </div>
                 <div class="validation">
-                    <span class="fas fa-check-circle check"></span>
+                    <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
             <div class="menu__submenu__flat delay-10">
@@ -152,7 +152,7 @@
                     <h3>23€</h3>
                 </div>
                 <div class="validation">
-                    <span class="fas fa-check-circle check"></span>
+                    <span class="fas fa-check-circle validation__check"></span>
                 </div>
             </div>
         </div>
